antigen-macros/tests/ui/non_kebab_case_name.stderr
error: #[antigen] `name = "FooBar"` must be kebab-case (lowercase with hyphens)
 --> tests/ui/non_kebab_case_name.rs:8:18
  |
8 | #[antigen(name = "FooBar", fingerprint = "x")]
  |                  ^^^^^^^^
